@@ -1319,3 +1319,9 @@ div.crm-container fieldset label {
 .img-responsive {
   width:100%;
 }
+
+#main {
+  width: 100%;
+  max-width: 1600px;
+  margin: 0 auto;
+}
