@@ -1,3 +1,7 @@
+Tag: tags/2017-10-03
+--------------------
+- zd-51: Max Width Desired for CM Bootstrap Sites
+
 Tag: tags/2017-09-27
 --------------------
 - zd-43: Images not displaying in Facebook
